--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "minio": "^8.0.4",
     "mongoose": "^8.9.5",
+    "nodemailer": "^6.10.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^11.1.0"
