--- a/FRONTEND/app.json
+++ b/FRONTEND/app.json
@@ -25,6 +25,12 @@
     "plugins": [
       "expo-router",
       [
+        "expo-image-picker",
+        {
+          "cameraPermission": "The app accesses your camera to let you take photos."
+        }
+      ],
+      [
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
