--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -24,9 +24,11 @@
     "axios": "^1.8.1",
     "expo": "~52.0.28",
     "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.7",
@@ -42,6 +44,7 @@
     "react-native": "0.76.6",
     "react-native-autocomplete-input": "^5.5.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.2.0",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
