--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.0",
@@ -25,6 +26,7 @@
     "expo": "~52.0.28",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
