--- a/FRONTEND/app.json
+++ b/FRONTEND/app.json
@@ -27,7 +27,8 @@
       [
         "expo-image-picker",
         {
-          "cameraPermission": "The app accesses your camera to let you take photos."
+          "cameraPermission": "The app accesses your camera to let you take photos.",
+          "photosPermission": "The app needs access to your photo library to select images."
         }
       ],
       [
