--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -29,7 +29,7 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.10",
     "@nestjs/platform-fastify": "^11.0.10",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
