--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'npm'
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+         path: ~/.npm
+         key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+         restore-keys: |
+          ${{ runner.OS }}-node-
 
       - name: Install Dependencies
         working-directory: ./BACKEND
