--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  backend-tests:
+  Continuous-Integration:
     runs-on: ubuntu-latest
 
     steps:
@@ -40,9 +40,9 @@ jobs:
         working-directory: ./BACKEND
         run: npm test
 
-  docker-tests:
+  Continuous-Deployment:
     runs-on: ubuntu-latest
-    needs: backend-tests
+    needs: Continuous-Integration
 
     steps:
       - name: Checkout Code
